--- a/Files/Squid/squid.conf
+++ b/Files/Squid/squid.conf
@@ -1,6 +1,3 @@
-#acl manager proto cache_object
-acl localhost src 127.0.0.1/32 ::1
-acl to_localhost dst 127.0.0.0/8 0.0.0.0/32 ::1
 acl SSL_ports port 443
 acl Safe_ports port 80
 acl Safe_ports port 21
@@ -14,17 +11,18 @@ acl Safe_ports port 591
 acl Safe_ports port 777
 acl CONNECT method CONNECT
 acl SSH dst ipserver-ipserver/255.255.255.255
-http_access allow SSH
 http_access allow manager localhost
 http_access deny manager
 http_access allow localhost
+http_access allow SSH
 http_access deny all
+http_port 3128
 http_port 8000
 http_port 8080
+hierarchy_stoplist cgi-bin ?
 coredump_dir /var/spool/squid
-refresh_pattern ^ftp: 1440 20% 10080
-refresh_pattern ^gopher: 1440 0% 1440
-refresh_pattern -i (/cgi-bin/|\?) 0 0% 0
-refresh_pattern . 0 20% 4320
+refresh_pattern ^ftp:           1440    20%     10080
+refresh_pattern ^gopher:        1440    0%      1440
+refresh_pattern -i (/cgi-bin/|\?) 0     0%      0
+refresh_pattern .               0       20%     4320
 visible_hostname KingKongVPN
-
