--- a/Files/OpenVPN-Monitor/monitoring.conf
+++ b/Files/OpenVPN-Monitor/monitoring.conf
@@ -3,5 +3,7 @@ server {
     location / {
         uwsgi_pass unix:///run/uwsgi/app/openvpn-monitor/socket;
         include uwsgi_params;
+        auth_basic "Restricted Content";
+        auth_basic_user_file /etc/nginx/.htpasswd;
     }
 }
