--- a/Files/Stunnel/stunnel.conf
+++ b/Files/Stunnel/stunnel.conf
@@ -4,6 +4,9 @@ socket = a:SO_REUSEADDR=1
 socket = l:TCP_NODELAY=1
 socket = r:TCP_NODELAY=1
 
+[dropbear]
+connect = 127.0.0.1:442
+accept = 444
 
 [dropbear]
 connect = 127.0.0.1:555
