--- a/Files/xray/web.conf
+++ b/Files/xray/web.conf
@@ -1,8 +1,8 @@
 server
 {
-        listen 82;
-        listen [::]:82;
-        server_name KingKongVPN;
+        listen 80;
+        listen [::]:80;
+        server_name xxx;
         return 301 https://$http_host$request_uri;
 
         access_log  /dev/null;
